--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "firebase-tools": "^11.8.0",
     "firebaseui": "^6.0.1",
     "jimp": "^0.16.1",
-    "js-yaml-loader": "^1.2.2",
     "lodash": "^4.17.21",
     "luxon": "^2.3.2",
     "nuxt": "^2.15.8",
@@ -79,6 +78,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^26.1.5",
     "eslint-plugin-node": "^11.1.0",
@@ -99,7 +99,6 @@
     "sass": "^1.54.5",
     "sass-loader": "^10.3.1",
     "ts-jest": "^27.1.1",
-    "vue-jest": "^3.0.4",
-    "yaml-loader": "^0.8.0"
+    "vue-jest": "^3.0.4"
   }
 }
