--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "deploy:functions": "firebase deploy --only functions"
   },
   "dependencies": {
-    "@bazzite/nuxt-optimized-images": "^0.4.0",
     "@nuxt/typescript-runtime": "^2.1.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.2.2",
@@ -100,6 +99,7 @@
     "sass": "^1.54.5",
     "sass-loader": "^10.3.1",
     "ts-jest": "^27.1.1",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "webp-loader": "^0.6.0"
   }
 }
