--- a/.github/workflows/production-firebase-hosting-merge.yml
+++ b/.github/workflows/production-firebase-hosting-merge.yml
@@ -2,7 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on production
-'on':
+"on":
   push:
     branches:
       - production
@@ -13,14 +13,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version: 16
       - name: Install npm modules
         run: yarn install
       - name: Build app
         run: yarn predeploy
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_SCALAMATSURI_2023_WEB }}
           channelId: live
           projectId: scalamatsuri-2023-web
